--- a/LX_after.html
+++ b/LX_after.html
@@ -91,7 +91,7 @@
 		<div class="topcard">
 			<div>
 			<p style="font-weight: 700; padding-top: 5px; font-size: 23px; padding: 4px;" contenteditable="false">
-				<span id="surname">凌</span><span id="givenname">德森</span>
+				<span id="surname">朱</span><span id="givenname">涛</span>
 			</p>
 			<p contenteditable="false">
 				学号：20<span>19</span>22<span>60</span><span>70</span><span>29</span>
